--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl         = "https://example.someadress.com"
+baseurl         = ""
 theme           = "casper-two"
 languageCode    = "en-US"
 disqusShortname = ""
