--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl         = ""
+baseurl         = "https://blissful-villani-90251c.netlify.com/"
 theme           = "casper-two"
 languageCode    = "en-US"
 disqusShortname = ""
@@ -16,9 +16,9 @@ paginate        = 6
   customCSS = []
   RSSLink = ""
 
-  twitterName = "faketryghost"
-  fbName = "fakeghost"
-  githubName = "eueung"
+  twitterName = ""
+  fbName = ""
+  githubName = ""
 
   logo = ""
   orgName = "EM"
